added some stuff to create a local SQL database

--- a/FamilyRecipes/appsettings.json
+++ b/FamilyRecipes/appsettings.json
@@ -1,12 +1,18 @@
-{
+/*{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FamilyRecipes-3d1fec72-3190-44ef-ad73-7ac4b41fc4ba;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+
+    // "DefaultConnection":"Server=(localdb)\\mssqllocaldb;Database=aspnet-FamilyRecipes-3d1fec72-3190-44ef-ad73-7ac4b41fc4ba;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },*/
+{
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=FamilyRecipes; Trusted_Connection=True; Encrypt=false"
+  }
 }
