--- a/FamilyRecipes/appsettings.Development.json
+++ b/FamilyRecipes/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "DetailedErrors": true
 }
