--- a/.github/workflows/master_myfamilycookbook.yml
+++ b/.github/workflows/master_myfamilycookbook.yml
@@ -21,12 +21,15 @@ jobs:
         with:
           dotnet-version: '8.x'
           include-prerelease: true
+          
+      - name: Restore dependencies
+        run: dotnet restore
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
       - name: Run Tests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --no-build --configuration Release --verbosity normal
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
