--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
         run: dotnet test --configuration Release --no-build --verbosity normal
 
       - name: Check code style
-        run: dotnet format --check
+        run: dotnet format FamilyRecipes.sln --check
