--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,3 +26,6 @@ jobs:
 
       - name: Run Tests
         run: dotnet test --no-build --configuration Release --verbosity normal
+
+      - name: Check code style
+        run: dotnet format FamilyRecipes/FamilyRecipes.sln --check
