--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -28,4 +28,4 @@ jobs:
         run: dotnet test --no-build --configuration Release --verbosity normal
 
       - name: Check code style
-        run: dotnet format FamilyRecipes/FamilyRecipes.sln --check
+        run: dotnet format FamilyRecipes.sln --check
