--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,31 +1,30 @@
-name: Build and Test ASP.Net Core App
+name: CI/CD Pipeline
 
 on:
-  push:
+  pull_request:
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
-  build-and-test:
-    runs-on: windows-latest
+  build:
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up .NET Core
+      - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.x'
+          dotnet-version: 7.0
 
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Build with dotnet
+      - name: Build the application
         run: dotnet build --configuration Release
 
-      - name: Run Tests
-        run: dotnet test --no-build --configuration Release --verbosity normal
+      - name: Run tests
+        run: dotnet test --no-build
 
-      - name: Check code style
-        run: dotnet format FamilyRecipes.sln --verify-no-changes
+
