--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -26,5 +26,6 @@ jobs:
 
       - name: Run tests
         run: dotnet test --no-build
+
 
 
